@@ -53,6 +53,9 @@ static int mount_ro;
 static unsigned mount_fmask;
 static unsigned mount_dmask;
 
+static BOOL smbfs_has_unicode = False;
+static BOOL smbfs_has_lfs = False;
+
 static void usage(void);
 
 static void exit_parent(int sig)
@@ -193,8 +196,11 @@ static struct cli_state *do_connection(char *svc_name)
 
 	/* This should be right for current smbfs. Future versions will support
 	   large files as well as unicode and oplocks. */
-	c->capabilities &= ~(CAP_UNICODE | CAP_LARGE_FILES | CAP_NT_SMBS |
-			     CAP_NT_FIND | CAP_STATUS32 | CAP_LEVEL_II_OPLOCKS);
+  	c->capabilities &= ~(CAP_NT_SMBS | CAP_NT_FIND | CAP_STATUS32 | CAP_LEVEL_II_OPLOCKS);
+  	if (!smbfs_has_lfs)
+  		c->capabilities &= ~CAP_LARGE_FILES;
+  	if (!smbfs_has_unicode)
+  		c->capabilities &= ~CAP_UNICODE;
 	if (!cli_session_setup(c, username, 
 			       password, strlen(password),
 			       password, strlen(password),
@@ -665,6 +671,8 @@ static void usage(void)
       scope=<arg>                     NetBIOS scope\n\
       iocharset=<arg>                 Linux charset (iso8859-1, utf8)\n\
       codepage=<arg>                  server codepage (cp850)\n\
+      unicode                         use unicode when communicating with server\n\
+      lfs                             large file system support\n\
       ttl=<arg>                       dircache time to live\n\
       guest                           don't prompt for a password\n\
       ro                              mount read-only\n\
@@ -789,6 +797,10 @@ static void parse_mount_smb(int argc, char **argv)
 				mount_ro = 0;
 			} else if(!strcmp(opts, "ro")) {
 				mount_ro = 1;
+			} else if(!strcmp(opts, "unicode")) {
+				smbfs_has_unicode = True;
+			} else if(!strcmp(opts, "lfs")) {
+				smbfs_has_lfs = True;
 			} else {
 				strncpy(p, opts, sizeof(pstring) - (p - options) - 1);
 				p += strlen(opts);
